# swagger-output.json
@@ -10,10 +10,21 @@
   "schemes": [
     "https"
   ],
+  "securityDefinitions": {
+    "OAuth2": {
+      "type": "oauth2",
+      "flow": "authorizationCode",
+      "authorizationUrl": "/login",
+      "scopes": {
+        "user": "Access user data"
+      }
+    }
+  },
   "paths": {
     "/": {
       "get": {
-        "description": "",
+        "summary": "Gets a string with the logged in status",
+        "description": "Gets a string with the logged in status",
         "responses": {
           "200": {
             "description": "OK"
@@ -23,7 +34,11 @@
     },
     "/github/callback": {
       "get": {
-        "description": "",
+        "tags": [
+          "OAuth"
+        ],
+        "summary": "Gets a string with the logged in status",
+        "description": "Gets a string with the logged in status",
         "responses": {
           "default": {
             "description": ""
@@ -34,9 +49,10 @@
     "/login": {
       "get": {
         "tags": [
-          "Patients"
+          "OAuth"
         ],
-        "description": "",
+        "summary": "Log in route",
+        "description": "Log in route",
         "responses": {
           "default": {
             "description": ""
@@ -47,9 +63,10 @@
     "/logout": {
       "get": {
         "tags": [
-          "Patients"
+          "OAuth"
         ],
-        "description": "",
+        "summary": "Log out route",
+        "description": "Log out route",
         "responses": {
           "default": {
             "description": ""
@@ -79,6 +96,9 @@
                 "name": "main"
               }
             }
+          },
+          "400": {
+            "description": "No patients found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -125,21 +145,25 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
-          },
-          "204": {
-            "description": "Created patient successfully"
+            "description": "A new patient has been added to the database"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Some error occurred while creating the patient record."
           },
           "401": {
             "description": "Unauthorized"
           },
           "500": {
-            "description": "Some error occurred while creating the patient record."
+            "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "user"
+            ]
+          }
+        ]
       }
     },
     "/patients/{id}": {
@@ -166,6 +190,9 @@
             "schema": {
               "$ref": "#/definitions/Patient"
             }
+          },
+          "400": {
+            "description": "Invalid record ID or no patient found with the entered id."
           },
           "500": {
             "description": "Internal Server Error"
@@ -218,21 +245,25 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
-          },
-          "204": {
-            "description": "Updated patient record successfully"
+            "description": "The patient record has been updated successfully"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Invalid record ID or no patient record found with that id."
           },
           "401": {
             "description": "Unauthorized"
           },
           "500": {
-            "description": "Some error ocurred while updating the patient record."
+            "description": "Something went wrong while updating the patient record. Please check id."
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "user"
+            ]
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -250,10 +281,10 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "The patient record has been deleted successfully."
           },
-          "204": {
-            "description": "Patient record deleted successfully"
+          "400": {
+            "description": "Invalid record ID or no patient record found with that id."
           },
           "401": {
             "description": "Unauthorized"
@@ -261,7 +292,14 @@
           "500": {
             "description": "Some error occurred while deleting the patient record."
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "user"
+            ]
+          }
+        ]
       }
     },
     "/practitioners/": {
@@ -286,6 +324,9 @@
                 "name": "main"
               }
             }
+          },
+          "400": {
+            "description": "No practitioners found."
           },
           "500": {
             "description": "Internal Server Error"
@@ -329,21 +370,25 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
-          },
-          "204": {
-            "description": "Created practitioner successfully"
+            "description": "A new practitioner has been added to the database"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Some error occurred while creating the practitioner record."
           },
           "401": {
             "description": "Unauthorized"
           },
           "500": {
-            "description": "Some error occurred while creating the practitioner record."
+            "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "user"
+            ]
+          }
+        ]
       }
     },
     "/practitioners/{id}": {
@@ -370,6 +415,9 @@
             "schema": {
               "$ref": "#/definitions/Practitioner"
             }
+          },
+          "400": {
+            "description": "Invalid record ID or no practitioner found with entered ID"
           },
           "500": {
             "description": "Internal Server Error"
@@ -419,21 +467,25 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
-          },
-          "204": {
-            "description": "Updated practitioner record successfully"
+            "description": "The practitioner record has been updated successfully"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Invalid record ID or no practitioner record found with that id."
           },
           "401": {
             "description": "Unauthorized"
           },
           "500": {
-            "description": "Some error ocurred while updating the practitioner record."
+            "description": "Something went wrong while updating the practitioner record. Please check id."
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "user"
+            ]
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -451,10 +503,10 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "The practitioner record has been deleted successfully."
           },
-          "204": {
-            "description": "Practitioner record deleted successfully"
+          "400": {
+            "description": "Invalid record ID or no practitioner record found with entered id."
           },
           "401": {
             "description": "Unauthorized"
@@ -462,7 +514,14 @@
           "500": {
             "description": "Some error occurred while deleting the practitioner record."
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "user"
+            ]
+          }
+        ]
       }
     },
     "/practitioners/zip/{zip}": {
@@ -496,6 +555,9 @@
               }
             }
           },
+          "400": {
+            "description": "No practitioners found."
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -524,6 +586,9 @@
                 "name": "main"
               }
             }
+          },
+          "400": {
+            "description": "No newsletters subscriber found."
           },
           "500": {
             "description": "Internal Server Error"
@@ -555,21 +620,25 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
-          },
-          "204": {
-            "description": "Created newsletter subscriber successfully"
+            "description": "A newsletter subscriber has been added to the database"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Some error occurred while creating the newsletter subscriber."
           },
           "401": {
             "description": "Unauthorized"
           },
           "500": {
-            "description": "Some error occurred while updating the newsletter subscriber."
+            "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "user"
+            ]
+          }
+        ]
       }
     },
     "/newsletters/{id}": {
@@ -597,6 +666,9 @@
               "$ref": "#/definitions/Newsletter"
             }
           },
+          "400": {
+            "description": "Invalid record ID or no newsletter subscriber found with entered id."
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -606,7 +678,7 @@
         "tags": [
           "Newsletters"
         ],
-        "summary": "Updates a newsletter",
+        "summary": "Updates a newsletter subscriber",
         "description": "Updates a newsletter subscriber",
         "parameters": [
           {
@@ -633,21 +705,25 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
-          },
-          "204": {
-            "description": "Updated newsletter subscriber successfully"
+            "description": "Newsletter subscriber has been updated successfully"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Invalid record ID or no newsletter subscriber with that id"
           },
           "401": {
             "description": "Unauthorized"
           },
           "500": {
-            "description": "Some error ocurred while updating the newsletter subscriber."
+            "description": "Something went wrong while updating the newsletter subscriber. Please check id."
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "user"
+            ]
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -665,10 +741,10 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "The newsletter subscriber has been deleted successfully."
           },
-          "204": {
-            "description": "Subscriber Deleted successfully"
+          "400": {
+            "description": "Invalid record ID or no newsletter subscriber with entered id."
           },
           "401": {
             "description": "Unauthorized"
@@ -676,7 +752,14 @@
           "500": {
             "description": "Some error occurred while deleting the newsletter subscriber."
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "user"
+            ]
+          }
+        ]
       }
     },
     "/comments/": {
@@ -701,6 +784,9 @@
                 "name": "main"
               }
             }
+          },
+          "400": {
+            "description": "No comments found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -738,21 +824,25 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
-          },
-          "204": {
-            "description": "Created successfully"
+            "description": "A new comment has been added to the database"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Some error occurred while creating the comment."
           },
           "401": {
             "description": "Unauthorized"
           },
           "500": {
-            "description": "Some error occurred while creating the comment."
+            "description": "Internal Server Error."
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "user"
+            ]
+          }
+        ]
       }
     },
     "/comments/{id}": {
@@ -779,6 +869,9 @@
             "schema": {
               "$ref": "#/definitions/Comment"
             }
+          },
+          "400": {
+            "description": "Invalid record ID or no comment found with the entered id."
           },
           "500": {
             "description": "Internal Server Error"
@@ -822,21 +915,25 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
-          },
-          "204": {
-            "description": "Updated successfully"
+            "description": "Comment has been updated successfully"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Invalid record ID or no comment with that id"
           },
           "401": {
             "description": "Unauthorized"
           },
           "500": {
-            "description": "Some error ocurred while updating the comment."
+            "description": "Something went wrong while updating the comment. Please check id."
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "user"
+            ]
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -854,10 +951,10 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "The comment has been deleted successfully."
           },
-          "204": {
-            "description": "Deleted successfully"
+          "400": {
+            "description": "Invalid record ID or no comment with that id"
           },
           "401": {
             "description": "Unauthorized"
@@ -865,21 +962,52 @@
           "500": {
             "description": "Some error occurred while deleting the comment."
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": [
+              "user"
+            ]
+          }
+        ]
       }
     },
     "/zips/": {
       "get": {
         "tags": [
-          "Patients"
+          "Zip Codes"
         ],
-        "description": "",
+        "summary": "Gets all the zip codes on the database",
+        "description": "Gets all the zip codes on the database",
         "produces": [
           "application/json"
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "zips": {
+                  "type": "array",
+                  "example": [
+                    "1234"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "No zip codes found."
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -927,6 +1055,109 @@
           "example": "john.doe@example.com"
         }
       }
+    },
+    "Patient": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "string",
+          "example": "679e801fa04d19f37756ea79"
+        },
+        "name": {
+          "type": "string",
+          "example": "Sophia Adams"
+        },
+        "dob": {
+          "type": "string",
+          "example": "09/18/79"
+        },
+        "email": {
+          "type": "string",
+          "example": "sophia.adams@example.com"
+        },
+        "address": {
+          "type": "object",
+          "properties": {
+            "street": {
+              "type": "string",
+              "example": "567 Maple Street"
+            },
+            "city": {
+              "type": "string",
+              "example": "Villageland"
+            },
+            "zip": {
+              "type": "string",
+              "example": "67890"
+            }
+          }
+        },
+        "phone": {
+          "type": "string",
+          "example": "555-789-2345"
+        },
+        "insurer": {
+          "type": "string",
+          "example": "National"
+        },
+        "request": {
+          "type": "string",
+          "example": "Morbi posuere enim quis ornare laoreet. Donec imperdiet lacus odio, ut sollicitudin velit vulputate non. Sed mattis dolor purus, vel efficitur metus porta vel. Donec in aliquam nisl. Suspendisse venenatis eros molestie nunc eleifend, vel euismod elit tincidunt."
+        }
+      }
+    },
+    "Practitioner": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "string",
+          "example": "679e903aa04d19f37756eafa"
+        },
+        "name": {
+          "type": "string",
+          "example": "Jessica Wilson"
+        },
+        "specialization": {
+          "type": "string",
+          "example": "Cardiovascular Disease"
+        },
+        "dea_number": {
+          "type": "string",
+          "example": "C91224313"
+        },
+        "address": {
+          "type": "object",
+          "properties": {
+            "street": {
+              "type": "string",
+              "example": "467 Elm Street"
+            },
+            "city": {
+              "type": "string",
+              "example": "Townsville"
+            },
+            "zip": {
+              "type": "string",
+              "example": "54321"
+            }
+          }
+        },
+        "phone": {
+          "type": "string",
+          "example": "555-333-701"
+        },
+        "email": {
+          "type": "string",
+          "example": "jessica.wilson@medical.com"
+        }
+      }
     }
-  }
+  },
+  "security": [
+    {
+      "OAuth2": [
+        "user"
+      ]
+    }
+  ]
 }
