# swaggerGen.js
@@ -22,41 +22,47 @@ const doc = {
       email: "john.doe@example.com",
     },
     Patient: {
-      _id: "67a15593581f535664c32de7",
-      name: "John Doe",
-      dob: "02/22/95",
-      email: "john.doe@example.com",
+      _id: "679e801fa04d19f37756ea79",
+      name: "Sophia Adams",
+      dob: "09/18/79",
+      email: "sophia.adams@example.com",
       address: {
-        street: "123 Main Street",
-        city: "Cityville",
-        zip: "12345",
+        street: "567 Maple Street",
+        city: "Villageland",
+        zip: "67890",
       },
+      phone: "555-789-2345",
+      insurer: "National",
+      request:
+        "Morbi posuere enim quis ornare laoreet. Donec imperdiet lacus odio, ut sollicitudin velit vulputate non. Sed mattis dolor purus, vel efficitur metus porta vel. Donec in aliquam nisl. Suspendisse venenatis eros molestie nunc eleifend, vel euismod elit tincidunt.",
     },
-    Practicioner: {
-      _id: "67a15593581f535664c32de7",
-      name: "Jeff Morrell",
-      specialization: "Allergy & Immunology",
-      dea_number: "C91234563",
+    Practitioner: {
+      _id: "679e903aa04d19f37756eafa",
+      name: "Jessica Wilson",
+      specialization: "Cardiovascular Disease",
+      dea_number: "C91224313",
       address: {
-        street: "256 Beverly Street",
-        city: "Cityville",
-        zip: "12345",
+        street: "467 Elm Street",
+        city: "Townsville",
+        zip: "54321",
       },
+      phone: "555-333-701",
+      email: "jessica.wilson@medical.com",
     },
   },
-  //   securityDefinitions: { // This is not implemented yet
-  //     OAuth2: {
-  //       type: "oauth2",
-  //       flow: "authorizationCode",
-  //       authorizationUrl: "/login",
-  //       scopes: { user: "Access user data" },
-  //     },
-  //   },
-  //   security: [
-  //     {
-  //       OAuth2: ["user"],
-  //     },
-  //   ],
+  securityDefinitions: {
+    OAuth2: {
+      type: "oauth2",
+      flow: "authorizationCode",
+      authorizationUrl: "/login",
+      scopes: { user: "Access user data" },
+    },
+  },
+  security: [
+    {
+      OAuth2: ["user"],
+    },
+  ],
 };
 
 const outputFile = "./swagger-output.json";
